--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <div class="nav-menu-content">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark-gray custom-navbar pad-15">
                 <div class="container">
-                    <a class="navbar-brand" href="./index.html"><img src="/img/logo.png" /></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" /></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -109,7 +109,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pl-0 pr-0">
                                 <div class="employees counter-box" style="background: #F15B26;">
                                     <div class="counter-img">
-                                        <img src="/img/school.png" />
+                                        <img src="./img/school.png" />
                                     </div>
                                     <h4>University</h4>
                                     <p class="counter-count">879</p>
@@ -119,7 +119,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pl-0 pr-0">
                                 <div class="customer counter-box" style="background: #FCB03B;">
                                     <div class="counter-img">
-                                        <img src="/img/student.png" />
+                                        <img src="./img/student.png" />
                                     </div>
                                     <h4>Student</h4>
                                     <p class="counter-count">954</p>
@@ -131,7 +131,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pl-0 pr-0">
                                 <div class="design counter-box" style="background: #F66D54;">
                                     <div class="counter-img">
-                                        <img src="/img/medal.png" />
+                                        <img src="./img/medal.png" />
                                     </div>
                                     <h4>Achivement</h4>
                                     <p class="counter-count">1050</p>
@@ -141,7 +141,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pl-0 pr-0">
                                 <div class="order counter-box" style="background: #3CB878;">
                                     <div class="counter-img">
-                                        <img src="/img/book.png" />
+                                        <img src="./img/book.png" />
                                     </div>
                                     <h4>Quiz</h4>
                                     <p class="counter-count">652</p>
@@ -162,7 +162,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-12">
                                 <div class="profile-image float-md-right"> 
-                                    <img src="/img/profile.jpg" alt=""> </div>
+                                    <img src="./img/profile.jpg" alt=""> </div>
                             </div>
                             <div class="col-lg-8 col-md-8 col-12">
                                 <h4 class="m-t-0 m-b-0"><strong>Michael</strong> Deo</h4>
@@ -191,7 +191,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-12">
                                 <div class="profile-image float-md-right"> 
-                                    <img src="/img/profile.jpg" alt=""> </div>
+                                    <img src="./img/profile.jpg" alt=""> </div>
                             </div>
                             <div class="col-lg-8 col-md-8 col-12">
                                 <h4 class="m-t-0 m-b-0"><strong>Michael</strong> Deo</h4>
@@ -220,7 +220,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-12">
                                 <div class="profile-image float-md-right">
-                                     <img src="/img/profile.jpg" alt=""> </div>
+                                     <img src="./img/profile.jpg" alt=""> </div>
                             </div>
                             <div class="col-lg-8 col-md-8 col-12">
                                 <h4 class="m-t-0 m-b-0"><strong>Michael</strong> Deo</h4>
@@ -248,7 +248,7 @@
     <footer class="copyright pt-60">
         <div class="container">
             <div class="copyright-content">
-               <img src="img/logo.png">
+               <img src="./img/logo.png">
                 <p>All right reserved by @minhaj 2020</p>
             
             </div>
