all image issue

--- a/about.html
+++ b/about.html
@@ -79,12 +79,13 @@
             <div class="col-md-6">
                 <div class="question-title">
                     <h3>About</h3>
-                    <h6>We provided best quiz question./h6>
+                    <h6>We provided best quiz question.</h6>
                 </div>
             </div>
            
         </div>
         </div>    
+    </div>
     </div>
 
     <section class="what-we pt-60 pb-60">
