--- a/courses.html
+++ b/courses.html
@@ -33,7 +33,7 @@
         <div class="nav-menu-content">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark-gray custom-navbar pad-15">
                 <div class="container">
-                    <a class="navbar-brand" href="./index.html"><img src="/img/logo.png" /></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" /></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -93,6 +93,7 @@
         </div>
         </div>    
     </div>
+    </div>
 
     <section class="our-courses-list pt-60 pb-60">
         <div class="container">
@@ -106,36 +107,36 @@
                 <div class="row">
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #FCB03Bff;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #fff;">
-                            <a href="#">
+                            <a href="./course-details.html">
                                 <h4>Applied<br>Physics </h4>
                             </a>
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #138D75;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #fff;">
-                            <a href="#">
+                            <a href="./course-details.html">
                                 <h4>Applied<br>Physics </h4>
                             </a>
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #28B463;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #fff;">
-                            <a href="#">
+                            <a href="./course-details.html">
                                 <h4>Applied<br>Physics </h4>
                             </a>
                         </div>
@@ -151,7 +152,7 @@
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #28B463;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
@@ -163,7 +164,7 @@
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #F15B26;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
@@ -175,7 +176,7 @@
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #c0392b;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     
@@ -184,7 +185,7 @@
                 <div class="row">
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #FCB03Bff;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
@@ -196,7 +197,7 @@
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #138D75;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
@@ -208,7 +209,7 @@
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #28B463;">
-                            <img src="/img/school.png" alt="">
+                            <img src="./img/school.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
@@ -227,7 +228,7 @@
     <footer class="copyright">
         <div class="container">
             <div class="copyright-content">
-               <img src="img/logo.png">
+               <img src="./img/logo.png">
                 <p>All right reserved by @minhaj 2020</p>
             
             </div>
