--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #fff;">
-                            <a href="#">
+                            <a href="./course-details.html">
                                 <h4>Applied<br>Physics </h4>
                             </a>
                         </div>
@@ -172,7 +172,7 @@
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #fff;">
-                            <a href="#">
+                            <a href="./course-details.html">
                                 <h4>Applied<br>Physics </h4>
                             </a>
                         </div>
@@ -184,7 +184,7 @@
                     </div>
                     <div class="col-sm-2 pl-0 pr-0">
                         <div class="courses-details" style="background-color: #fff;">
-                            <a href="#">
+                            <a href="./course-details.html">
                                 <h4>Applied<br>Physics </h4>
                             </a>
                         </div>
