--- a/question-english.html
+++ b/question-english.html
@@ -33,7 +33,7 @@
         <div class="nav-menu-content">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark-gray custom-navbar pad-15">
                 <div class="container">
-                    <a class="navbar-brand" href="./index.html"><img src="/img/logo.png" /></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" /></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -94,6 +94,7 @@
             </div>
         </div>
         </div>    
+    </div>
     </div>
 
     <section class="question pt-60 pb-60">
@@ -240,7 +241,7 @@ Or ( Choose the correct spelling of the word from the options below. )?
     <footer class="copyright">
         <div class="container">
             <div class="copyright-content">
-               <img src="img/logo.png">
+               <img src="./img/logo.png">
                 <p>All right reserved by @minhaj 2020</p>
             
             </div>
