--- a/course-details.html
+++ b/course-details.html
@@ -33,7 +33,7 @@
         <div class="nav-menu-content">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark-gray custom-navbar pad-15">
                 <div class="container">
-                    <a class="navbar-brand" href="./index.html"><img src="/img/logo.png" /></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" /></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -94,7 +94,7 @@
             <div class="white-shadow">
                 <div class="row">
                     <div class="details-pic">
-                        <img src="/img/profile.jpg" alt="image" class="img-responsive">
+                        <img src="./img/profile.jpg" alt="image" class="img-responsive">
                     </div>
                 </div>
                 <div class="details-course-body">
