--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="banner-img d-none d-lg-block d-md-block ">
-                                <img src="./img/BACKGROUND.png" />
+                                <img src="./img/BACKGROUND2.png" />
                             </div>
                         </div>
                     </div>
