question add using js

--- a/course-details.html
+++ b/course-details.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="button-footer">
-                        <a href="./question-english.html" class="btn btn-success apply-quiz-btn">Start Quiz</a>
+                        <a href="./start.html" class="btn btn-success apply-quiz-btn">Start Quiz</a>
                     </div> 
                     </div>
                 </div>
